Progress on invoice page

--- a/src/App/Client/GoldEx.Client/Pages/Calculate/Components/Calculator.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Calculate/Components/Calculator.razor
@@ -69,6 +69,7 @@
                 <MudNumericField Adornment="Adornment.End"
                                  AdornmentText="گرم"
                                  For="() => _model.Weight"
+                                 Format="G29"
                                  HideSpinButtons="true"
                                  Immediate="true"
                                  Label="وزن"
