--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
@@ -146,7 +146,7 @@
         </MudGrid>
 
         <MudStack Row AlignItems="AlignItems.Center" Class="my-2">
-            <MudText Typo="Typo.body2">اقلام فاکتور</MudText>
+            <MudText Typo="Typo.h6">اقلام فاکتور</MudText>
             <MudSpacer />
             <MudPaper Elevation="0">
                 <MudTextField Adornment="Adornment.End"
