--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/ExtraCostList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/ExtraCostList.razor
@@ -12,9 +12,9 @@
 
     <MudTable Items="@Items" Elevation="0">
         <HeaderContent>
-            <MudTh>مبلغ</MudTh>
-            <MudTh>بابت</MudTh>
-            <MudTh>عملیات</MudTh>
+            <MudTh></MudTh>
+            <MudTh></MudTh>
+            <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="مبلغ" Class="p-1">
