--- a/src/App/Client/GoldEx.Client/Pages/Settings/BaseInfo.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/BaseInfo.razor
@@ -33,7 +33,7 @@
             <MudTextField Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.Info"
                           @bind-Value="_model.InstitutionName"
-                          Label="نام گالری"
+                          Label="@_model.GetDisplayName(() => _model.InstitutionName)"
                           AutoFocus="true"
                           Variant="Variant.Outlined"
                           For="() => _model.InstitutionName"></MudTextField>
@@ -42,7 +42,7 @@
             <MudTextField Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.House"
                           @bind-Value="_model.Address"
-                          Label="آدرس"
+                          Label="@_model.GetDisplayName(() => _model.Address)"
                           Variant="Variant.Outlined"
                           For="() => _model.Address"></MudTextField>
         </MudItem>
@@ -50,7 +50,7 @@
             <MudTextField Adornment="Adornment.End"
                           AdornmentIcon="@Icons.Material.Filled.Phone"
                           @bind-Value="_model.PhoneNumber"
-                          Label="شماره تلفن"
+                          Label="@_model.GetDisplayName(() => _model.PhoneNumber)"
                           Variant="Variant.Outlined"
                           For="() => _model.PhoneNumber"></MudTextField>
         </MudItem>
@@ -66,7 +66,7 @@
                              @bind-Value="_model.TaxPercent"
                              Format="G29"
                              Variant="Variant.Outlined"
-                             Label="مالیات"
+                             Label="@_model.GetDisplayName(() => _model.TaxPercent)"
                              HideSpinButtons="true"
                              For="() => _model.TaxPercent"></MudNumericField>
         </MudItem>
@@ -76,7 +76,7 @@
                              @bind-Value="_model.GoldProfitPercent"
                              Variant="Variant.Outlined"
                              Format="G29"
-                             Label="سود طلا"
+                             Label="@_model.GetDisplayName(() => _model.GoldProfitPercent)"
                              HideSpinButtons="true"
                              For="() => _model.GoldProfitPercent"></MudNumericField>
         </MudItem>
@@ -86,9 +86,19 @@
                              @bind-Value="_model.JewelryProfitPercent"
                              Variant="Variant.Outlined"
                              Format="G29"
-                             Label="سود جواهر"
+                             Label="@_model.GetDisplayName(() => _model.JewelryProfitPercent)"
                              HideSpinButtons="true"
                              For="() => _model.JewelryProfitPercent"></MudNumericField>
+        </MudItem>
+        <MudItem xs="12" sm="4">
+            <MudNumericField Adornment="Adornment.End"
+                             AdornmentIcon="@Icons.Material.Filled.Percent"
+                             @bind-Value="_model.GoldSafetyMarginPercent"
+                             Variant="Variant.Outlined"
+                             Format="G29"
+                             Label="@_model.GetDisplayName(() => _model.GoldSafetyMarginPercent)"
+                             HideSpinButtons="true"
+                             For="() => _model.GoldSafetyMarginPercent"></MudNumericField>
         </MudItem>
     </MudGrid>
 
