--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
@@ -1,9 +1,33 @@
 ﻿@using GoldEx.Client.Pages.Invoices.ViewModels
+@using GoldEx.Shared.DTOs.PriceUnits
 @inherits GoldExComponentBase
 
 <MudCard Class="p-4" Elevation="4">
     <MudForm Model="Model" @ref="@_form" Validation="@(_invoiceValidator.ValidateValue)" ValidationDelay="0">
-        <MudText Typo="Typo.h6" GutterBottom="true">اطلاعات فاکتور</MudText>
+        <MudStack Row AlignItems="AlignItems.End">
+            <MudText Typo="Typo.h6" GutterBottom="true">اطلاعات فاکتور</MudText>
+            <MudSpacer />
+            <MudSelect T="GetPriceUnitTitleResponse?"
+                       Value="Model.InvoicePriceUnit"
+                       ValueChanged="OnInvoicePriceUnitChanged"
+                       Label="@Model.GetDisplayName(() => Model.InvoicePriceUnit)"
+                       For="() => Model.InvoicePriceUnit"
+                       FitContent="true"
+                       Margin="Margin.Dense"
+                       Variant="Variant.Outlined">
+                @foreach (var item in _priceUnits)
+                {
+                    <MudSelectItem Value="item">
+                        <MudStack Row AlignItems="AlignItems.Center" Spacing="2">
+                            <MudAvatar Size="Size.Small">
+                                <MudImage Src="@(ApiUrls.Icons.Get(IconType.PriceUnit, item.Id))" Alt="@item.Title" />
+                            </MudAvatar>
+                            <MudText Class="d-none d-md-inline">@item.Title</MudText>
+                        </MudStack>
+                    </MudSelectItem>
+                }
+            </MudSelect>
+        </MudStack>
         <MudDivider Class="mb-2" />
         <MudGrid>
             <MudItem xs="12" md="2">
@@ -223,7 +247,7 @@
                 </LoadingContent>
             </MudTable>
         </div>
-        
+
         @if (Model.InvoiceItems.Any())
         {
             <MudText Class="mt-2" Typo="Typo.h6" GutterBottom="true">هزینه ها</MudText>
@@ -297,7 +321,7 @@
                 </MudItem>
             </MudGrid>
         }
-        
+
 
         <MudDivider Class="my-2" />
 
