--- a/src/App/Client/GoldEx.Client/Pages/Calculate/Components/Calculator.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Calculate/Components/Calculator.razor
@@ -64,7 +64,7 @@
         <div class="d-flex flex-column flex-wrap align-center gap-3 mt-3">
             @if (_isInitialLoading)
             {
-                <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="30px" Animation="Animation.Wave" />
+                <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="30px" Animation="Animation.Wave" Class="mb-2" />
             }
             else
             {
